<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:icon="@drawable/ic_menu_camera"
        android:key="@string/images_to_pdf"
        android:title="@string/images_to_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_text_format_black_24dp"
        android:key="@string/text_to_pdf"
        android:title="@string/text_to_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_qrcode_24dp"
        android:key="@string/qr_barcode_pdf"
        android:title="@string/qr_barcode_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_excel"
        android:key="@string/excel_to_pdf"
        android:title="@string/excel_to_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_menu_gallery"
        android:key="@string/viewFiles"
        android:title="@string/viewFiles" />

    <CheckBoxPreference
        android:icon="@drawable/ic_history_black_24dp"
        android:key="@string/history"
        android:title="@string/history" />

    <CheckBoxPreference
        android:icon="@drawable/ic_lock_black_24dp"
        android:key="@string/add_password"
        android:title="@string/add_password" />

    <CheckBoxPreference
        android:icon="@drawable/ic_lock_open_black_24dp"
        android:key="@string/remove_password"
        android:title="@string/remove_password" />

    <CheckBoxPreference
        android:icon="@drawable/ic_text_format_black_24dp"
        android:key="@string/add_text"
        android:title="@string/add_text" />

    <CheckBoxPreference
        android:icon="@drawable/baseline_crop_rotate_24"
        android:key="@string/rotate_pages"
        android:title="@string/rotate_pages" />

    <CheckBoxPreference
        android:icon="@drawable/ic_text_format_black_24dp"
        android:key="@string/extract_text"
        android:title="@string/extract_text" />

    <CheckBoxPreference
        android:icon="@drawable/ic_branding_watermark_black_24dp"
        android:key="@string/add_watermark"
        android:title="@string/add_watermark" />

    <CheckBoxPreference
        android:icon="@drawable/ic_add_black_24dp"
        android:key="@string/add_images"
        android:title="@string/add_images" />

    <CheckBoxPreference
        android:icon="@drawable/ic_merge_type_black_24dp"
        android:key="@string/merge_pdf"
        android:title="@string/merge_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_call_split_black_24dp"
        android:key="@string/split_pdf"
        android:title="@string/split_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_invert_color_24dp"
        android:key="@string/invert_pdf"
        android:title="@string/invert_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_compress_image"
        android:key="@string/compress_pdf"
        android:title="@string/compress_pdf" />

    <CheckBoxPreference
        android:icon="@drawable/ic_remove_duplicate_square_black"
        android:key="@string/remove_duplicate_pages"
        android:title="@string/remove_duplicate_pages" />

    <CheckBoxPreference
        android:icon="@drawable/ic_remove_circle_black_24dp"
        android:key="@string/remove_pages"
        android:title="@string/remove_pages" />

    <CheckBoxPreference
        android:icon="@drawable/ic_sort"
        android:key="@string/reorder_pages"
        android:title="@string/reorder_pages" />

    <CheckBoxPreference
        android:icon="@drawable/ic_broken_image_black_24dp"
        android:key="@string/extract_images"
        android:title="@string/extract_images" />

    <CheckBoxPreference
        android:icon="@drawable/ic_image_black_24dp"
        android:key="@string/pdf_to_images"
        android:title="@string/pdf_to_images" />

    <CheckBoxPreference
        android:icon="@drawable/ic_zip_to_pdf"
        android:key="@string/zip_to_pdf"
        android:title="@string/zip_to_pdf" />
</PreferenceScreen>
