<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_check_box_24dp"
        android:orderInCategory="2"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/baseline_delete_24"
        android:orderInCategory="3"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/baseline_share_24"
        android:orderInCategory="4"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_merge"
        android:icon="@drawable/ic_merge_type_white_24dp"
        android:orderInCategory="1"
        android:title="@string/merge_pdf"
        app:showAsAction="ifRoom" />
</menu>
