<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:picker="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_watermark_text"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/watermarkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="5dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_watermark_angle"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/watermarkAngle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/watermark_angle"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_watermark_color"
        android:textSize="20sp" />

    <!--color picker-->
    <com.github.danielnilsson9.colorpickerview.view.ColorPickerView
        android:id="@+id/watermarkColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        picker:alphaChannelVisible="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_watermark_font_size"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/watermarkFontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/watermark_font_size"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_watermark_font_family"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/watermarkFontFamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_watermark_style"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/watermarkStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:spinnerMode="dropdown" />


</LinearLayout>