<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/item_sort"
        android:icon="@drawable/ic_sort_white_24px"
        android:title="@string/sort"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/delete"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />


</menu>
