<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/border_width_prompt"
        android:textSize="20sp" />

    <EditText
        android:inputType="number"
        android:id="@+id/border_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/compress_dialog_enter_prompt"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cbSetDefault"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/set_as_default" />

</LinearLayout>